Primera parte web con el listado de atributos, faltan controladores y detalle del atributo

--- a/c0415egrupo/GestorAtributosWeb/index.html
+++ b/c0415egrupo/GestorAtributosWeb/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
+    <script>document.write('<base href="' + document.location + '" />');</script>
     <title>Angular QuickStart</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
@@ -20,6 +22,6 @@
   </head>
 
   <body>
-    <my-app>Loading...</my-app>
+    <my-app>Cargando Aplicaci&oacute;n...</my-app>
   </body>
 </html>
