--- a/c0415egrupo/GestorAtributosWeb/index.html
+++ b/c0415egrupo/GestorAtributosWeb/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script>document.write('<base href="' + document.location + '" />');</script>
-    <title>Angular QuickStart</title>
+    <title>Gestor de Atributos</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
